@@ -1,5 +1,6 @@
 package gui;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.LinkedHashMap;
 import java.util.Map;
 import java.util.Set;
@@ -13,14 +14,15 @@ import analysis.strategy.MinimaxStrategy;
 import game.IGame;
 import game.IPlayer;
 import game.IPosition;
+import game.MoveListFactory;
 import gui.gamestate.IGameRenderer;
 
 public class GameRegistry {
-	private static final Map<String, GameRegistryItem> gameMap = new LinkedHashMap<>();
+	private static final Map<String, GameRegistryItem<?, ?>> gameMap = new LinkedHashMap<>();
 
-	public static <M, P extends IPosition<M, P>> GameRegistryItem registerGame(String gameName, Class<? extends IGame<M, P>> gameClass, Class<? extends IGameRenderer<M, P>> gameRendererClass) {
-		GameRegistryItem gameRegistryItem = new GameRegistryItem(gameClass, gameRendererClass);
-		gameMap.put(gameName, gameRegistryItem);
+	public static <M, P extends IPosition<M, P>> GameRegistryItem<M, P> registerGame(IGame<M, P> game, Class<? extends IGameRenderer<M, P>> gameRendererClass) {
+		GameRegistryItem<M, P> gameRegistryItem = new GameRegistryItem<>(game, gameRendererClass);
+		gameMap.put(game.getName(), gameRegistryItem);
 		return gameRegistryItem;
 	}
 
@@ -29,21 +31,21 @@ public class GameRegistry {
 	}
 
 	@SuppressWarnings("unchecked")
-	public static <M, P extends IPosition<M, P>> IGame<M, P> newGame(String gameName) {
-		try {
-			return (IGame<M, P>) gameMap.get(gameName).gameClass.newInstance();
-		} catch (InstantiationException | IllegalAccessException e) {
-			throw new RuntimeException(e);
-		}
+	public static <M, P extends IPosition<M, P>> IGame<M, P> getGame(String gameName) {
+		return (IGame<M, P>) gameMap.get(gameName).game;
 	}
 
 	@SuppressWarnings("unchecked")
 	public static <M, P extends IPosition<M, P>> IGameRenderer<M, P> newGameRenderer(String gameName) {
 		try {
-			return (IGameRenderer<M, P>) gameMap.get(gameName).gameRendererClass.newInstance();
-		} catch (InstantiationException | IllegalAccessException e) {
+			return (IGameRenderer<M, P>) gameMap.get(gameName).gameRendererClass.getDeclaredConstructor().newInstance();
+		} catch (InstantiationException | IllegalAccessException | IllegalArgumentException | InvocationTargetException | NoSuchMethodException | SecurityException e) {
 			throw new RuntimeException(e);
 		}
+	}
+
+	public static <M> MoveListFactory<M> newMoveListFactory(String gameName) {
+		return new MoveListFactory<>(gameMap.get(gameName).game.getMaxMoves());
 	}
 
 	public static Set<String> getPlayerNames(String gameName) {
@@ -54,29 +56,31 @@ public class GameRegistry {
 		return gameMap.get(gameName).playerMap.get(playerName).get();
 	}
 
-	public static class GameRegistryItem {
-		final Class<? extends IGame<?, ?>> gameClass;
+	public static class GameRegistryItem<M, P extends IPosition<M, P>> {
+		private final IGame<M, P> game;
 		final Class<? extends IGameRenderer<?, ?>> gameRendererClass;
 		final Map<String, Supplier<IPlayer>> playerMap = new LinkedHashMap<>(); // The first player is the default player
 
-		public GameRegistryItem(Class<? extends IGame<?, ?>> gameClass, Class<? extends IGameRenderer<?, ?>> gameRendererClass) {
-			this.gameClass = gameClass;
+		public GameRegistryItem(IGame<M, P> game, Class<? extends IGameRenderer<M, P>> gameRendererClass) {
+			this.game = game;
 			this.gameRendererClass = gameRendererClass;
 		}
 
-		public GameRegistryItem registerPlayer(String playerName, IPlayer player) {
+		public GameRegistryItem<M, P> registerPlayer(String playerName, IPlayer player) {
 			playerMap.put(playerName, () -> player);
 			return this;
 		}
 
-		public <M, P extends IPosition<M, P>> GameRegistryItem registerStrategy(String playerName, IDepthBasedStrategy<M, P> strategy, int numWorkers, long msPerMove) {
-			playerMap.put(playerName, () -> new ComputerPlayer(strategy, numWorkers, playerName, msPerMove));
+		public GameRegistryItem<M, P> registerStrategy(String playerName, IDepthBasedStrategy<M, P> strategy, int numWorkers, long msPerMove) {
+			MoveListFactory<?> moveListFactory = GameRegistry.newMoveListFactory(game.getName());
+			playerMap.put(playerName, () -> new ComputerPlayer(strategy, moveListFactory, numWorkers, playerName, msPerMove));
 			return this;
 		}
 
-		public <M, P extends IPosition<M, P>> GameRegistryItem registerPositionEvaluator(String playerName, IPositionEvaluator<M, P> positionEvaluator, int numWorkers, long msPerMove) {
-			playerMap.put(playerName + "_AB", () -> new ComputerPlayer(new AlphaBetaStrategy<M, P>(positionEvaluator), numWorkers, playerName + "_AB", msPerMove));
-			playerMap.put(playerName + "_MM", () -> new ComputerPlayer(new MinimaxStrategy<M, P>(positionEvaluator), numWorkers, playerName + "_MM", msPerMove));
+		public GameRegistryItem<M, P> registerPositionEvaluator(String playerName, IPositionEvaluator<M, P> positionEvaluator, int numWorkers, long msPerMove) {
+			MoveListFactory<M> moveListFactory = GameRegistry.newMoveListFactory(game.getName());
+			playerMap.put(playerName + "_AB", () -> new ComputerPlayer(new AlphaBetaStrategy<>(moveListFactory, positionEvaluator), moveListFactory, numWorkers, playerName + "_AB", msPerMove));
+			playerMap.put(playerName + "_MM", () -> new ComputerPlayer(new MinimaxStrategy<>(moveListFactory, positionEvaluator), moveListFactory, numWorkers, playerName + "_MM", msPerMove));
 			return this;
 		}
 	}
